# discord-wos-rally-team-timer

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/discord_team_timer/: main.py
src/discord_wos_rally_team_timer/: TimerCommand.py  TimerView.py  main.py  run_timer.py
src/discord_wos_rally_team_timer/teambot/: __init__.py  group.py  player.py  timerbot.py
tests/: test_TimerCommand.py
